Saving message finally works! (without ANY validation yet though)

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,3 +54,7 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+message.content.null.message=Message cannot be empty
+user.nick.size.message=Nickname cannot be longer than 35 characters
+user.nick.match.message=Your nickname contains forbidden characters
