Layout changes, custom validation messages

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,3 +1,13 @@
+message.content.nullable=Message cannot be empty
+message.content.size.toobig=Maximum message length is 400
+message.content.size.toosmall=Message cannot be empty
+user.nick.size.toobig=Nickname cannot be longer than 35 characters
+user.nick.matches.invalid=Your nickname contains forbidden characters
+user.nick.unique=This nickname is already used with other email
+user.email.nullable=Email is required
+user.email.unique=This email is already used with other nickname
+user.email.email.invalid=Invalid email format
+
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
 default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
@@ -54,7 +64,3 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
-
-message.content.null.message=Message cannot be empty
-user.nick.size.message=Nickname cannot be longer than 35 characters
-user.nick.match.message=Your nickname contains forbidden characters
